--- a/bike_data.ipynb
+++ b/bike_data.ipynb
@@ -237,21 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# we = pd.read_csv('./assets/cycle-share-dataset/weather.csv')\n",
-    "\n",
-    "\n",
     "we.Date = pd.to_datetime(we.Date)\n",
-    "# we.stoptime = pd.to_datetime(we.stoptime)\n",
-    "\n",
-    "# we[['DAY''DAY']]  ==  we.Date.applyapply((we.datetimedatetim.isoweekday)\n",
     "we['Day_of_week'] = we.Date.dt.weekday_name\n",
     "we['Month'] = we.Date.dt.month\n",
-    "we['Year'] = we.Date.dt.year\n",
-    "# we.head()"
+    "we['Year'] = we.Date.dt.year"
    ]
   },
   {
@@ -470,26 +463,6 @@
    "outputs": [],
    "source": [
     "modified = st[['station_id', 'modification_date', 'install_dockcount', 'current_dockcount', 'decommission_date']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# filtered"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df.loc[:, (df != 0).any(axis=0)]\n",
-    "\n",
-    "# filtered"
    ]
   },
   {
